# Rusty_Vkoffer

./: .env  .gitignore  Cargo.toml  README.md  save_passwords.json
migrations/: 0001_password_table.sql
src/: cli_module.rs  data_module.rs  embedding_data.rs  load_decrypted_passwords.rs  main.rs  types_module.rs
