[package]
name = "clrus_t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.2", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { vesion = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15.0"
futures = "0.3.28"

