[package]
name = "clrus_t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.2", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15.0"
futures = "0.3.28"
inquire = "0.6.2"
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
clipboard = "0.5.0"
serde_json = "1.0"
serde = "1.0.164"

